--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <header>
     <img src="/images/logo.svg" alt="">
   </header>
+  <main>
+    <img src="/images/hero-mobile.jpg" alt="">
+  </main>
   We're coming soon
 
   Hello fellow shoppers! We're currently building our new fashion store. 
