--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
   </header>
   <main>
     <img src="/images/hero-mobile.jpg" alt="">
+    <section>
+      <header>
+        <span id="we">We're</span>
+        <span id="coming">coming soon</span>
+      </header>
+      <main id="description">
+        Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </main>
+      <footer>
+        <input type="text" placeholder="Email Address">
+
+
+      </footer>
+    </section>
   </main>
-  We're coming soon
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+   
 
-  Email Address
+  
+  
   
 </body>
 </html>
