--- a/index.html
+++ b/index.html
@@ -26,17 +26,12 @@
         Add your email below to stay up-to-date with announcements and our launch deals.
       </main>
       <footer>
-        <input type="text" placeholder="Email Address">
-
-
+        <div class="email-box">
+            <input type="text" placeholder="Email Address">
+            <img src="/images/icon-arrow.svg" alt="">
+        </div>
       </footer>
     </section>
-  </main>
-
-   
-
-  
-  
-  
+  </main> 
 </body>
 </html>
